--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,10 +11,10 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       PGDATA: ${PGDATA}
     volumes:
-      - dbtuto:/data/postgres-tuto
+      - tutos:/data/postgres-tuto
     ports:
       - "5432:5432"
     restart: unless-stopped
 volumes:
-  dbtuto:
+  tutos:
     external: true
