--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.7.2
 astroid==2.15.8
+bleach==6.1.0
 certifi==2023.11.17
 charset-normalizer==3.3.2
 dill==0.3.7
@@ -7,11 +8,15 @@ Django==4.2.6
 django-filter==23.5
 djangorestframework==3.14.0
 docopt==0.6.2
+gunicorn==21.2.0
 idna==3.6
+importlib-metadata==4.8.3
 isort==5.12.0
 lazy-object-proxy==1.9.0
-Markdown==3.5.1
+Markdown==3.3.7
+martor==1.6.28
 mccabe==0.7.0
+packaging==23.2
 pipreqs==0.4.13
 platformdirs==3.11.0
 psycopg2-binary==2.9.9
@@ -22,10 +27,14 @@ pylint-plugin-utils==0.8.2
 python-dotenv==1.0.0
 pytz==2023.3.post1
 requests==2.31.0
+six==1.16.0
 sqlparse==0.4.4
 tomli==2.0.1
 tomlkit==0.12.1
 typing_extensions==4.8.0
+tzdata==2023.3
 urllib3==2.1.0
+webencodings==0.5.1
 wrapt==1.15.0
 yarg==0.1.9
+zipp==3.17.0
