correctly configured docker with django and postgres communication

--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,6 @@ POSTGRES_PASSWORD=""
 POSTGRES_DB=""
 PGDATA=""
 POSTGRES_TEST_DB=""
+
+# localhost for local development and the name of the service for containerizations
 HOST=""
